src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Interested %28Arrange Call-back%29</fullName>
        </values>
        <values>
            <fullName>Interested %28Live Handover%29</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Not Interested %E2%80%93 Opt Out</fullName>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Referred Out</fullName>
        </values>
        <values>
            <fullName>Unable To Contact %E2%80%93 Call Back%2FTry Again</fullName>
        </values>
        <values>
            <fullName>Unable To Contact %E2%80%93 Gatekeeper</fullName>
        </values>
        <values>
            <fullName>Unable To Contact %E2%80%93 No number</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Qualified Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accepts_Credit_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepts Credit Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Due_Date__c</fullName>
        <label>Activity Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Email_Address__c</fullName>
        <label>Business Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Legal_Name__c</fullName>
        <label>Business Legal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Nature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Nature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Position__c</fullName>
        <label>Business Position</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shareholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Registered_in_Hong_Kong__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Registered in Hong Kong</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Registered_in_Philippines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Registered in Philippines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Registered_in_Singapore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Registered in Singapore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Registered_in_UK__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The business must be registered in your designated country.</inlineHelpText>
        <label>Business Registered in UK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_in_Operation_Minimum_3_months__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business in Operation Minimum 3 Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_in_Operation_Minimum_6_months__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business in Operation Minimum 6 months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callback_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks if the client requested a callback to express.</description>
        <inlineHelpText>Has a callback been requested to express interest?</inlineHelpText>
        <label>Callback Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convert_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates if a particular lead is assigned to a partner user or not.</description>
        <label>Convert Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DWH_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWH Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Txt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Txt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IMAGE( 
CASE(Status , 
&quot;Qualified&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Interested&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Call Back&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Callback&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Open&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Interested (Live Handover)&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Interested (Arrange Call-back)&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Not Interested – Opt Out&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;Unable To Contact – No number&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Unable To Contact – Gatekeeper&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Unable To Contact – Call Back/Try Again&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Not Interested&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;Not Qualified&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;Opt Out&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;Referred Out&quot;, &quot;/img/samples/flag_red.gif&quot;,
null), 
&quot;Lead Flag&quot;)</formula>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_Address_Line_2__c</fullName>
        <label>LE Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_Address_Line_3__c</fullName>
        <label>LE Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_Building_Name__c</fullName>
        <label>LE Building Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_City_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LE City</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.LE_Sub_region__c</field>
                <operation>equals</operation>
                <valueField>City__c.Sub_region__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LE_City__c</fullName>
        <formula>LE_City_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LE City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_Country__c</fullName>
        <label>LE Country</label>
        <picklist>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LE_District__c</fullName>
        <label>LE District</label>
        <picklist>
            <controllingField>LE_Region__c</controllingField>
            <picklistValues>
                <fullName>Central and Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wan Chai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sham Shui Po</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kowloon City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kwun Tong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wong Tai Sin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yau Tsim Mong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kwai Tsing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sai Kung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sha Tin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tai Po</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tsuen Wan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuen Mun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yuen Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caloocan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Pinas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Makati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malabon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandaluyong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marikina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muntinlupa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navotas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paranaque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasig</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LE_Floor_No__c</fullName>
        <label>LE Floor No.</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_Postcode__c</fullName>
        <label>LE Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_Region__c</fullName>
        <label>LE Region</label>
        <picklist>
            <controllingField>LE_Country__c</controllingField>
            <picklistValues>
                <fullName>Calabarzon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Luzon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Region(ex. Central Area)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kowloon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Capital Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North-East Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire and the Humber</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LE_Street_Name__c</fullName>
        <label>LE Street Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_Street_Number__c</fullName>
        <label>LE Street Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_Sub_region__c</fullName>
        <label>LE Sub-region</label>
        <picklist>
            <controllingField>LE_Region__c</controllingField>
            <picklistValues>
                <fullName>Aberdeen City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aberdeenshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antrim and Newtownabbey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argyll and Bute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banbridge and Craigavon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bath and North East Somerset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackburn with Darwen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackpool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blaenau Gwent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bournemouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bracknell Forest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridgend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brighton and Hove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buckinghamshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caerphilly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambridgeshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carmarthenshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Causeway Coast and Glens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Bedfordshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceredigion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheshire East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheshire West and Chester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of Edinburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clackmannanshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Id__c</fullName>
        <label>Lead Owner Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Profile_Name__c</fullName>
        <formula>Owner:User.Profile_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Website_Id__c</fullName>
        <label>Partner Website Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Website_Tracker__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Tracker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Partner</value>
            </filterItems>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>equals</operation>
                <valueField>Account.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Partner_Leads</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonAccountId__c</fullName>
        <label>PersonAccountId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.isActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Program__c.Country_Mapping__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecType_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason_Code__c</fullName>
        <description>Accepts values for the lead rejected reason.</description>
        <inlineHelpText>Please select a reject reason</inlineHelpText>
        <label>Reject Reason Code</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Financed By Bank / Other Financial Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Interest Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dislike Daily Repayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Loan Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Tenure Too Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Processing Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t Want To Borrow From Unfamiliar Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response From Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Repayment Record With Prior AMP Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Credit Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Loan Exposure / Loans Elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak Sales / Downward Sales Trend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Bank Performance / Rent Behind Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Target Customer (No Card Sales / Risky Business Nature)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Doc/ Info - Unwilling Or Can&apos;t Provide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer Requesting Pre-Mature Top Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspicious Loan Purpose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t Need Money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non - Target Customer (No Card Sales)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejects Daily Repayments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Card Terminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail Qualification Criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable To Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TA_Address_Line_2__c</fullName>
        <label>TA Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Address_Line_3__c</fullName>
        <label>TA Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Building_Name__c</fullName>
        <label>TA Building Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_City_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TA City</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.TA_Sub_region__c</field>
                <operation>equals</operation>
                <valueField>City__c.Sub_region__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Leads (TA City)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TA_City__c</fullName>
        <formula>TA_City_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TA City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Country__c</fullName>
        <label>TA Country</label>
        <picklist>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TA_District__c</fullName>
        <label>TA District</label>
        <picklist>
            <controllingField>TA_Region__c</controllingField>
            <picklistValues>
                <fullName>Central and Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wan Chai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sham Shui Po</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kowloon City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kwun Tong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wong Tai Sin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yau Tsim Mong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kwai Tsing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sai Kung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sha Tin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tai Po</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tsuen Wan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuen Mun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yuen Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caloocan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Pinas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Makati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malabon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandaluyong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marikina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muntinlupa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navotas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paranaque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasig</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TA_Floor_No__c</fullName>
        <label>TA Floor No.</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Postcode__c</fullName>
        <label>TA Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
</CustomObject>